Edited width of img. Changed layout breakpoint to min-width: 900px to avoid awkward layout where text is longer than the photo. Edited about description.

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -33,7 +33,7 @@
   text-align: justify;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 900px) {
   .about-content {
     flex-direction: row;
     justify-content: space-evenly;
@@ -41,7 +41,7 @@
 
   .about-content img {
     object-fit: cover;
-    max-width: 45%;
+    width: 50%;
     max-height: 500px;
     margin: 0;
   }
